<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".Common.LoginSignup.RetailerStartUpScreen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/retailer_circle_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="120dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/retailer_heading"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/muli"
                android:text="@string/retailer_tag_line"
                android:textAlignment="center"
                android:textColor="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startup_login_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="callLoginScreen"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:transitionName="transition_login" />

                <Button
                    android:id="@+id/startup_signup_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:onClick="callSignUpScreen"
                    android:text="@string/sign_up"
                    android:textColor="@color/black"
                    android:transitionName="transition_signup"/>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:text="@string/how_we_work"
                android:textColor="@color/black" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>