<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"

    tools:context=".Common.LoginSignup.ForgetPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView
                android:id="@+id/forget_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/general_back_icon"
                android:padding="5dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:src="@drawable/forget_password_icon"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textAllCaps="true"
                android:fontFamily="@font/muli_black"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_details"
                android:textSize="18sp"
                android:fontFamily="@font/muli"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                style="@style/Widget.Material3.TextInputLayout.FilledBox"
                app:boxBackgroundColor="@color/lightWhite"
                app:boxStrokeColor="@color/black"
                app:boxStrokeWidthFocused="2dp"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/field_email_icon"
                app:startIconTint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                android:textColorHint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_btn"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:onClick="callMakeSelection"
                android:transitionName="transition_forget"/>
            
        </LinearLayout>

    </ScrollView>
</LinearLayout>