<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Retailer_SignUp"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:transitionName="transition_signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/general_back_icon"
                android:transitionName="transition_back_arrow_btn"/>

            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text"/>

<!--            All details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

<!--                Full Name-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_full_name"
                    app:startIconDrawable="@drawable/field_full_name_icon"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

<!--                Username-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    app:startIconDrawable="@drawable/field_username_icon"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

<!--                Email-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email"
                    app:startIconDrawable="@drawable/field_email_icon"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>



<!--                Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    app:startIconDrawable="@drawable/field_password_icon"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/signup_next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next_btn"
                android:backgroundTint="@color/black"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:elevation="5dp"
                android:onClick="callNextSignupScreen"
                android:transitionName="transition_next_btn"/>

            <Button
                android:id="@+id/signup_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="#00000000"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:elevation="5dp"
                android:fontFamily="@font/muli"
                android:transitionName="transition_login_btn"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>