<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Common.LoginSignup.Retailer_SignUp_3rd"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/signup_back_button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:src="@drawable/general_back_icon"
                android:transitionName="transition_back_arrow_btn"/>

            <TextView
                android:id="@+id/signup_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/muli_black"
                android:text="@string/create_account"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_title_text"/>

            <!--            All details-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/signup_ccp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:ccp_autoDetectCountry="true"
                    app:ccp_showFlag="true"
                    app:ccp_showNameCode="true"
                    app:ccp_showFullName="true"
                    android:padding="5dp"
                    android:background="@drawable/black_border"/>

                <!--                Phone Number -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    app:startIconDrawable="@drawable/field_phone_icon"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                    app:startIconTint="@color/black"
                    app:hintTextColor="@color/black"
                    android:textColorHint="@color/black"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/black"
                    app:boxStrokeWidthFocused="2dp"
                    android:layout_marginTop="5dp"
                    app:boxStrokeColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>




            </LinearLayout>

            <Button
                android:id="@+id/signup_verify_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_btn"
                android:backgroundTint="@color/black"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:elevation="5dp"
                android:onClick="callVerifyOTPScreen"
                android:transitionName="transition_verify_btn"/>

            <Button
                android:id="@+id/signup_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:backgroundTint="#00000000"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:elevation="5dp"
                android:fontFamily="@font/muli"
                android:transitionName="transition_login_btn"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>